<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/circle"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/circle"
            android:text="@string/register"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/logout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/circle"
            android:text="@string/logout"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/chinColor"
        android:id="@+id/mainNav">

        <Button
            android:id="@+id/navMain"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/navPutting"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/calendarActivity"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/navDriving"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/teamActivity"
            android:background="?android:attr/selectableItemBackground" />

    </TableRow>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/puttingSelectionTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:focusable="true"
        android:src="@drawable/ic_baseline_arrow_circle_up_24"
        app:layout_constraintBottom_toTopOf="@+id/mainNav"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/puttingRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/mainNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>