<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createRace">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/eventNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventNameField" />

            <EditText
                android:id="@+id/editTextEventNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/simulatorNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulatorNameField" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTrackSimulatorField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/trackNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trackNameField" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTrackNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/eventDateNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDateNameField" />

            <EditText
                android:id="@+id/eventDateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/eventTimeNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventTimeNameField" />

            <EditText
                android:id="@+id/eventTimeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventSimulatorTimeNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventSimulatorTimeNameField" />

            <EditText
                android:id="@+id/eventSimulatorTimeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />

        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>